third_party/move/move-compiler-v2/tests/more-v1/liveness/dead_refs_nested_invalid.exp

Diagnostics:
error: cannot copy local `x` which is still mutably borrowed
  ┌─ tests/more-v1/liveness/dead_refs_nested_invalid.move:9:13
  │
4 │         let x_ref = &mut x;
  │                     ------ previous mutable local borrow
  ·
7 │                 _ = x_ref
  │                 - conflicting reference `x_ref` used here
8 │             };
9 │             _ = x;
  │             ^ copied here

error: cannot copy local `x` which is still mutably borrowed
   ┌─ tests/more-v1/liveness/dead_refs_nested_invalid.move:19:16
   │
15 │         let x_ref = &mut x;
   │                     ------ previous mutable local borrow
16 │         loop {
17 │            _ = x_ref;
   │            - conflicting reference `x_ref` used here
18 │            loop {
19 │                _ = x;
   │                ^ copied here

error: cannot copy local `x` which is still mutably borrowed
   ┌─ tests/more-v1/liveness/dead_refs_nested_invalid.move:29:67
   │
27 │         let x_ref = &mut x;
   │                     ------ previous mutable local borrow
28 │         loop {
29 │             if (cond) { _ = x_ref; break } else { while (!cond) { _ = x } }
   │                         -                                         ^ copied here
   │                         │
   │                         conflicting reference `x_ref` used here
